test/compare/testdata/misc/comments2.go
// errorcheck

package main

/*/ // ERROR `comment not terminated`

func main() {}